  Explicitly mark Django 1.5, 1.6 and 1.7 as not supported
  (tests fail with those versions) in packaging.

- Add support of Django 1.8 and Django 1.9.

- Breaking: `django_docusign.api` package is no longer imported in
  `django_docusign` root package.
  Instead of doing ``import django_docusign``, just do:
  ``from django_docusign import api as django_docusign``.


0.12 (2015-09-10)
-----------------

- Support Django 1.7
- Support Tox 2


0.11 (2015-03-16)
-----------------

Refactoring related to `pydocusign` version 0.13.

- Refactoring #37 - Project repository moved to novafloss organization
  (was novapost).

- Refactoring #38 - Upgraded to pydocusign 0.13. Refactored handling of
  routingOrder and Envelope.post_recipient_view.


0.10 (2015-02-04)
-----------------

Features around settings.

- Feature #34 - ``DocuSignBackend`` uses ``settings.DOCUSIGN_*`` to instanciate
  `DocuSign` client. Available settings are ``DOCUSIGN_ROOT_URL``,
  ``DOCUSIGN_USERNAME``, ``DOCUSIGN_PASSWORD``, ``DOCUSIGN_INTEGRATOR_KEY``,
  ``DOCUSIGN_ACCOUNT_ID``, ``DOCUSIGN_APP_TOKEN``, ``DOCUSIGN_TIMEOUT``.

- Bug #30 - Handle DocuSign callbacks that have no "decline reason" attribute
  (was raising errors in such a situation).


0.8 (2014-11-28)
----------------

Introducing DocuSign templates.

- Feature #28 - Introduced support for DocuSign templates to create envelopes.
  To run the tests, you'll need a new ``PYDOCUSIGN_TEST_TEMPLATE_ID``
  environment variable: DocuSign's UUID of a template which has 2 roles.


0.7 (2014-10-22)
----------------

Bugfixes & refactoring, mostly around ``SignatureCallbackView``.

- Bug #20 - In ``SignatureCallbackView``:

  * ``update_signature`` is not triggered if signature is not updated, when a
    signer, not the last, has just signed the envelope.

  * ``update_signer`` is triggered for every signer when signature and signers
    have "Sent" status (signature has just been created in embedded mode).
