@@ -3,6 +3,11 @@ env:
   matrix:
   - TOXENV=py27-django18
   - TOXENV=py27-django19
+  - TOXENV=py33-django18
+  - TOXENV=py34-django18
+  - TOXENV=py34-django19
+  - TOXENV=py35-django18
+  - TOXENV=py35-django19
   - TOXENV=flake8
   - TOXENV=readme
 install:
