@@ -7,6 +7,23 @@ import sys
 from setuptools import setup
 
 
+# Tox integration.
+from setuptools.command.test import test as TestCommand
+
+
+class Tox(TestCommand):
+    """Test command that runs tox."""
+    def finalize_options(self):
+        TestCommand.finalize_options(self)
+        self.test_args = []
+        self.test_suite = True
+
+    def run_tests(self):
+        import tox  # import here, cause outside the eggs aren't loaded.
+        errno = tox.cmdline(self.test_args)
+        sys.exit(errno)
+
+
 #: Absolute path to directory containing setup.py file.
 here = os.path.abspath(os.path.dirname(__file__))
 #: Boolean, ``True`` if environment is running Python version 2.
@@ -25,6 +42,9 @@ CLASSIFIERS = [
     'Development Status :: 5 - Production/Stable',
     'License :: OSI Approved :: BSD License',
     'Programming Language :: Python :: 2.7',
+    'Programming Language :: Python :: 3.3',
+    'Programming Language :: Python :: 3.4',
+    'Programming Language :: Python :: 3.5',
     'Framework :: Django',
 ]
 KEYWORDS = [
@@ -38,38 +58,20 @@ PACKAGES = [NAME.replace('-', '_')]
 REQUIREMENTS = [
     'Django>=1.8,<1.10',
     'django-anysign>=1.0',
-    'pydocusign>=0.13.1,<1.0',
+    'pydocusign>=1.0',
     'setuptools',
 ]
-if IS_PYTHON2:
-    REQUIREMENTS.append('mock')
 ENTRY_POINTS = {}
-TEST_REQUIREMENTS = []
-CMDCLASS = {}
-SETUP_REQUIREMENTS = [
-    'setuptools'
-]
-
-
-# Tox integration.
-from setuptools.command.test import test as TestCommand
-
-
-class Tox(TestCommand):
-    """Test command that runs tox."""
-    def finalize_options(self):
-        TestCommand.finalize_options(self)
-        self.test_args = []
-        self.test_suite = True
-
-    def run_tests(self):
-        import tox  # import here, cause outside the eggs aren't loaded.
-        errno = tox.cmdline(self.test_args)
-        sys.exit(errno)
-
-
-TEST_REQUIREMENTS.append('tox')
-CMDCLASS['test'] = Tox
+SETUP_REQUIREMENTS = ['setuptools']
+TEST_REQUIREMENTS = ['tox']
+if IS_PYTHON2:
+    TEST_REQUIREMENTS.extend([
+        'mock',
+    ])
+CMDCLASS = {'test': Tox}
+EXTRA_REQUIREMENTS = {
+    'test': TEST_REQUIREMENTS,
+}
 
 
 if __name__ == '__main__':  # Do not run setup() when we import this module.
@@ -92,4 +94,5 @@ if __name__ == '__main__':  # Do not run setup() when we import this module.
         tests_require=TEST_REQUIREMENTS,
         cmdclass=CMDCLASS,
         setup_requires=SETUP_REQUIREMENTS,
+        extras_require=EXTRA_REQUIREMENTS,
     )
