@@ -1,15 +1,22 @@
 [tox]
 envlist =
-    py27-django{18,19},
+    py{27,33,34,35}-django{18},
+    py{27,34,35}-django{19},
     flake8,
     sphinx,
     readme
 
 [testenv]
+basepython =
+    py27: python2.7
+    py33: python3.3
+    py34: python3.4
+    py35: python3.5
 deps =
     coverage
     django18: Django>=1.8,<1.9
     django19: Django>=1.9,<1.10
+    py27: mock
     nose
     nose-exclude
 passenv = DOCUSIGN_*
@@ -21,6 +28,7 @@ commands =
     pip freeze
 
 [testenv:flake8]
+basepython = python2.7
 deps =
     flake8
 commands =
@@ -28,6 +36,7 @@ commands =
     flake8 --exclude=migrations demo
 
 [testenv:sphinx]
+basepython = python2.7
 deps =
     Sphinx
 commands =
@@ -38,6 +47,7 @@ whitelist_externals =
     make
 
 [testenv:readme]
+basepython = python2.7
 deps =
     docutils
     pygments
@@ -49,6 +59,7 @@ whitelist_externals =
     mkdir
 
 [testenv:release]
+basepython = python2.7
 deps =
     wheel
     zest.releaser
